# media-cleaner

./: .gitignore  AGENTS.md  API.md  CLAUDE.md  CLI_BACKEND_WORKER_TEST.md  DOCKER.md  MANUAL_RUN.md  README.md  TESTS.md  TROUBLESHOOTING.md  docker-compose.yml  implementation-plan.md  job-list.md  logging review.md  run_all.bat  run_docker.bat  run_lint.bat  run_tests.bat  test_paths.py  test_probe.py  walkthrough-jobs.md
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: routes_jobs.py  routes_list.py  routes_process.py  routes_tree.py
backend/src/app/core/: config.py  ffprobe.py  models.py  security_paths.py
backend/src/app/core/jobs/: events.py  queue.py  store.py
backend/src/tests/: conftest.py  test_api.py  test_events.py  test_ffprobe.py  test_job_queue.py  test_job_store.py  test_main.py  test_routes_jobs.py  test_security_paths.py  test_tree_filtering.py
frontend/: .dockerignore  .env.example  UI.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vitest.config.ts
frontend/src/: App.vue  main.css  main.ts  types.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/api/: client.test.ts
frontend/src/__tests__/components/: BatchLanguageBar.test.ts  FolderTree.test.ts  JobLogs.test.ts  JobProgress.test.ts  JobsList.test.ts  MainLayout.test.ts  MediaTable.test.ts  TopToolbar.test.ts
frontend/src/__tests__/stores/: jobStore.test.ts  jobsListStore.test.ts  mediaStore.test.ts
frontend/src/api/: client.ts
frontend/src/components/: BatchLanguageBar.vue  FolderTree.vue  JobLogs.vue  JobProgress.vue  JobsList.vue  JobsPanel.vue  MainLayout.vue  MediaTable.vue  OutputControls.vue  TopToolbar.vue
frontend/src/stores/: jobStore.ts  jobsListStore.ts  mediaStore.ts
worker/: Dockerfile  pyproject.toml
worker/src/tests/: conftest.py  test_ffmpeg_runner.py  test_processor.py
worker/src/worker/: ffmpeg_runner.py  main.py  processor.py
