[project]
name = "video-cleaner-backend"
version = "0.1.0"
description = "Backend for Video Cleaner Web"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sse-starlette>=2.0.0",
]

[tool.flit.module]
name = "app"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
