[project]
name = "video-cleaner-worker"
version = "0.1.0"
description = "Worker for Video Cleaner Web"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.flit.module]
name = "worker"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--tb=short"
pythonpath = ["src"]
